k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dns-parser-server
  labels:
    app: dns-parser
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dns-parser
  template:
    metadata:
      labels:
        app: dns-parser
    spec:
      containers:
        - name: dns-parser
          image: dns-parser-server:latest  # <--- this will be overridden
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
