k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dns-parser-service
spec:
  selector:
    app: dns-parser
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
