k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dns-parser-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dns-parser.local     # <--- change as needed
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dns-parser-service
                port:
                  number: 80
